--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,35 +1,45 @@
-# This is a workflow to deploy a MERN stack app to an EC2 instance with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Memories App Server Deploy
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy-server:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/Checkout@v2
 
-      # SSH into our remote server
-      - name: SSH in ec2 remote server
-        uses: appleboy/ssh-action@v0.1.5
+      - name: SSH to server for deployment
+        uses: appleboy/ssh-action@master
         with:
-         host:  ${{ secrets.HOSTNAME }}
-         key: ${{ secrets.AWS_PRIVATE_KEY }}
-         username:  ${{ secrets.AWS_USERNAME }}
-         
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |-
+            sudo apt-get update
+            sudo apt-get install git -y
+            echo "--NODE & NPM--"
+            sudo apt install nodejs -y
+            sudo apt install npm -y
+            echo "-----PM2------"
+            sudo npm install -g pm2
+            sudo pm2 startup systemd
+            echo "-----NGINX------"
+            sudo apt-get install -y nginx
+            echo "---FIREWALL---"
+            sudo ufw allow OpenSSH
+            sudo ufw allow 'Nginx Full'
+            sudo ufw --force enable 
+            cd /home/ubuntu
+            sudo rm -rf memories-server
+            git clone https://github.com/eniolastyle/memories-server.git
+            cd memories-server
+            npm install
+            sudo rm /etc/nginx/sites-available/default
+            sudo cp default /etc/nginx/sites-available/ -r
+            sudo pm2 kill
+            pm2 start index.js
+            sudo systemctl kill nginx || true
+            sudo systemctl restart nginx
