--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,9 +14,9 @@ jobs:
       - name: SSH to server for deployment
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.HOSTNAME }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.AWS_PRIVATE_KEY }}
           script: |-
             sudo apt-get update
             sudo apt-get install git -y
